Issue #1 Fix :: Add default language selection | default language set + minor UI fix.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
       {
         "command": "codemetry.storeKey",
         "title": "codemetry > Store API key"
+      },
+      {
+        "command": "codemetry.storeDefaultLanguage",
+        "title": "codemetry > Set Default Language"
       } 
     ]
   },
