--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codemetry",
   "displayName": "codemetry",
   "description": "Generate comments with AI for code snippets selected in the vscode editor",
-  "version": "0.0.1",
+  "version": "1.1.0",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -63,6 +63,6 @@
     "type": "git",
     "url": "https://github.com/msris108/codemetry"
   },
-  "icon": "images/logo.png",
+  "icon": "./logo.png",
   "keywords": ["productivity", "chatGPT"]
 }
